--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,9 @@ addons:
   ssh_known_hosts:
     - 45.79.35.9
 before_install:
-  - openssl aes-256-cbc -K $encrypted_08fd58b20b48_key -iv $encrypted_08fd58b20b48_iv -in example-travis.enc -out example-travis -d
+  - openssl aes-256-cbc -K $encrypted_d79793b7f6d4_key -iv $encrypted_d79793b7f6d4_iv -in videogames-webpage.enc -out videogames-webpage -d
   - eval "$(ssh-agent -s)"
-  - cp example-travis ~/.ssh/example-travis
-  - chmod 600 ~/.ssh/example-travis
-  - ssh-add ~/.ssh/example-travis
+  - cp videogames-webpage ~/.ssh/videogames-webpage
+  - chmod 600 ~/.ssh/videogames-webpage
+  - ssh-add ~/.ssh/videogames-webpage
   - echo -e "Host 45.79.35.9\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-deploy:
-  - provider: script
-    skip_cleanup: true
-    script: bash deploy.sh
-    on:
-      branch: master
